# junk_apps

./: .gitignore  .gitmodules
dokugaku/: design_memo.org
drive_school_time_table_scraper/: find_continue_blacks.py  requirements.txt
mds_webapp/: app.py  calu_emb_and_save.py  mds.py
mds_webapp/embed_sample/: embed_sweater.npy  embed_toshiotoko.npy
mds_webapp/notebooks/: altair_plot_test.ipynb
mds_webapp/search_result_sample/: search_result_sweater.csv  search_result_toshiotoko.csv
next_ametalk_scraper/: .gitignore  README.org  pyproject.toml
next_ametalk_scraper/next_ametalk_scraper/: 2023_01_10_lineup.html  Scraper.py
next_ametalk_scraper/tests/: test_next_ametalk_scraper.py
tab_app/: index.html  tab.css  tab.js
