[tool.poetry]
name = "next_ametalk_scraper"
version = "0.1.0"
description = ""
authors = ["Hirata-Kodai <hiratako@ist.hokudai.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
requests-html = "^0.10.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
